--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -2,6 +2,8 @@
 @tailwind utilities;
 @import './font';
 @import './partials/header';
+@import './partials/project-link';
+@import './partials/technology-link';
 
 html {
   font-family: 'Titillium Web', sans-serif;
@@ -15,4 +17,8 @@ html, body {
 
 body {
   @apply flex flex-col;
+}
+
+.main {
+  @apply flex flex-col justify-start items-center p-6;
 }
