more work on content display

--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -4,6 +4,7 @@
 @import './partials/header';
 @import './partials/project-link';
 @import './partials/technology-link';
+@import './project';
 
 html {
   font-family: 'Titillium Web', sans-serif;
