--- a/assets/scss/partials/technology-link.scss
+++ b/assets/scss/partials/technology-link.scss
@@ -1,5 +1,5 @@
 .technology-link {
-  @apply inline-flex justify-center items-center bg-white p-2 text-sm rounded shadow leading-none transition duration-100 ease-in-out m-1;
+  @apply inline-flex justify-center items-center bg-white p-2 text-sm rounded-sm shadow-sm leading-none transition duration-100 ease-in-out m-1 no-underline;
 
   &:hover, &:focus {
     @apply bg-nf-blue text-white;
