--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -21,5 +21,5 @@ body {
 }
 
 .main {
-  @apply flex flex-col justify-start items-center p-6;
+  @apply flex flex-col justify-start items-center p-6 max-w-6xl w-full mx-auto;
 }
