--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -1,8 +1,23 @@
 {{ define "main" }}
     <div class="project__content">
-        {{ $image := resources.Get (print "images/" $.Params.Image) | fingerprint }}
-        <a href="{{ $image.Permalink }}" target="_blank" rel="noopener">
-            <img src="{{ $image.Permalink }}" class="project__image" alt="{{ $.Title}} Screenshot"/>
+        {{/* TODO: use webp */}}
+        {{ $webpBg := resources.Get (print "images/" $.Params.Image) | minify | fingerprint }}
+        {{ $jpgBg := resources.Get (print "images/" $.Params.Image) | minify | fingerprint }}
+        {{ $sizes := slice "272" "327" "366" "461" "576" "768" }}
+        <a href="{{ $webpBg.Permalink }}" target="_blank" rel="noopener">
+            <picture>
+                {{ range $sizes }}
+                    <source media="(max-width: {{ . }}px)"
+                            srcset='{{ ($webpBg.Resize (print . "x q100")).Permalink }}'/>
+                {{ end }}
+                <img src="{{ $webpBg.Permalink }}"
+                     class="project__image"
+                     aria-hidden="true"
+                     loading="lazy"
+                     width="768" height="480"
+                     onerror="this.onerror = null; this.src = '{{ $jpgBg.Permalink }}'"
+                     alt="{{ $.Title}} Screenshot Preview"/>
+            </picture>
         </a>
         <div class="project__attributes">
             <h1 class="project__title">{{ $.Title }}</h1>
