--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,10 +1,25 @@
 {{ define "main" }}
     {{ $pages := slice (.Site.GetPage "/employee-portal") }}
     {{ range $page := $pages}}
-        {{ $image := resources.Get (print "images/" $page.Params.Image) | fingerprint }}
         <div class="project-link">
             <a href="{{ $page.Permalink }}" aria-hidden="true">
-                <img src="{{ $image.Permalink }}" class="project-link__image" alt="{{ $page.Title}} Screenshot Preview"/>
+                {{/* TODO: use webp */}}
+                {{ $webpBg := resources.Get (print "images/" $page.Params.Image) | minify | fingerprint }}
+                {{ $jpgBg := resources.Get (print "images/" $page.Params.Image) | minify | fingerprint }}
+                {{ $sizes := slice "272" "327" "366" "461" "576" }}
+                <picture>
+                    {{ range $sizes }}
+                        <source media="(max-width: {{ . }}px)"
+                                srcset='{{ ($webpBg.Resize (print . "x q100")).Permalink }}'/>
+                    {{ end }}
+                    <img src="{{ $webpBg.Permalink }}"
+                         class="project-link__image"
+                         aria-hidden="true"
+                         loading="lazy"
+                         width="576" height="360"
+                         onerror="this.onerror = null; this.src = '{{ $jpgBg.Permalink }}'"
+                         alt="{{ $page.Title}} Screenshot Preview"/>
+                </picture>
             </a>
 
             <div class="project-link__container">
