changes to content and default archetypes

--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -2,6 +2,7 @@
 @tailwind utilities;
 @import './font';
 @import './partials/header';
+@import './partials/footer';
 @import './partials/project-link';
 @import './partials/technology-link';
 @import './project';
