--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,5 +1,5 @@
 {{ define "main" }}
-    {{ $pages := slice (.Site.GetPage "/employee-portal") (.Site.GetPage "/groceries-list-app") }}
+    {{ $pages := slice (.Site.GetPage "/employee-portal") (.Site.GetPage "/groceries-list-app") (.Site.GetPage "/kvcc-sign-in") }}
     <div class="project-links">
         {{ range $page := $pages}}
             <div class="project-link">
@@ -29,8 +29,8 @@
                         <span class="project-link__client">{{ $page.Params.Client }}</span>
                     </a>
                     <div class="project-link__technologies">
-                        {{ range $technology := $page.Params.Technologies }}
-                            {{ partial "partials/technology-link.html" (dict "technology" $technology ) }}
+                        {{ range sort $page.Params.Technologies }}
+                            {{ partial "partials/technology-link.html" (dict "technology" . ) }}
                         {{ end }}
                     </div>
                 </div>
