--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -1,4 +1,5 @@
 <header class="header">
+    <a href="#main" class="sr-only">Skip to main content.</a>
     {{ $logo := resources.Get "images/favicon.svg" | minify | fingerprint }}
     <img src="{{ $logo.Permalink }}" alt="NF Logo" class="header__logo"/>
 
