--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <meta name="author" content="Nick Frost"/>
-    <meta name="description" content="{{ .Description }}"/>
+    <meta name="description" content="{{ index .Params.Details 0 }}"/>
 
     {{ $favicon := resources.Get "images/favicon.svg" | minify | fingerprint }}
     <link rel="icon" type="image/svg+xml" href="{{ $favicon.Permalink }}">
