--- a/assets/scss/partials/header.scss
+++ b/assets/scss/partials/header.scss
@@ -24,7 +24,7 @@
       @apply px-4 py-3;
     }
 
-    &:hover, &:focus {
+    &:hover, &:focus, &--active {
       @apply bg-nf-blue text-white;
     }
   }
