--- a/layouts/index.html
+++ b/layouts/index.html
@@ -6,19 +6,19 @@
             <div class="project-link">
                 <a href="{{ $page.Permalink }}" class="project-link__image__container project-link__a slide slide-right">
                     {{/* TODO: use webp */}}
-                    {{ $webpBg := resources.Get (print "images/" $page.Params.Image) | minify | fingerprint }}
-                    {{ $jpgBg := resources.Get (print "images/" $page.Params.Image) | minify | fingerprint }}
+                    {{ $webp := resources.Get (print "images/" (print $page.Params.Image ".webp")) | fingerprint }}
+                    {{ $jpg := resources.Get (print "images/" (print $page.Params.Image ".jpg")) | fingerprint }}
                     {{ $sizes := slice "480" "768" "1024" "1280" "1440" }}
                     <picture>
                         {{ range $sizes }}
                             <source media="(max-width: {{ . }}px)"
-                                    srcset='{{ ($webpBg.Resize (print . "x q90")).Permalink }}'/>
+                                    srcset='{{ ($jpg.Resize (print . "x q90")).Permalink }}'/>
                         {{ end }}
-                        <img src="{{ $webpBg.Permalink }}"
+                        <img src="{{ $webp.Permalink }}"
                              class="project-link__image"
                              loading="lazy"
-                             width="576" height="360"
-                             onerror="this.onerror = null; this.src = '{{ $jpgBg.Permalink }}'"
+                             width="672" height="420"
+                             onerror="this.onerror = null; this.src = '{{ $jpg.Permalink }}'"
                              alt="{{ $page.Title}} Screenshot Preview"/>
                     </picture>
                 </a>
