--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -2,13 +2,13 @@
     <div class="project__content">
         {{ $webp := resources.Get (print "images/" (print $.Params.Image ".webp")) | fingerprint }}
         {{ $jpg := resources.Get (print "images/" (print $.Params.Image ".jpg")) | fingerprint }}
-        {{ $sizes := slice "480" "768" "1024" "1280" "1440" }}
+        {{ $sizes := slice "320" "480" "768" "1024" "1280" "1440" }}
         <a href="{{ $webp.Permalink }}" target="_blank" rel="noopener" class="slide slide-right">
             <picture>
-{{/*                {{ range $sizes }}*/}}
-{{/*                    <source media="(max-width: {{ . }}px)"*/}}
-{{/*                            srcset='{{ ($jpg.Resize (print . "x q90")).Permalink }}'/>*/}}
-{{/*                {{ end }}*/}}
+                {{ range $sizes }}
+                    <source media="(max-width: {{ . }}px)"
+                            srcset='{{ ($jpg.Resize (print . "x q75")).Permalink }}'/>
+                {{ end }}
                 <img src="{{ $webp.Permalink }}"
                      class="project__image"
                      loading="lazy"
