--- a/layouts/index.html
+++ b/layouts/index.html
@@ -4,15 +4,16 @@
     <div class="project-links">
         {{ range $page := sort $pages "Params.Order" "desc"}}
             <div class="project-link">
-                <a href="{{ $page.Permalink }}" class="project-link__image__container project-link__a slide slide-right">
+                <a href="{{ $page.Permalink }}"
+                   class="project-link__image__container project-link__a slide slide-right">
                     {{ $webp := resources.Get (print "images/" (print $page.Params.Image ".webp")) | fingerprint }}
                     {{ $jpg := resources.Get (print "images/" (print $page.Params.Image ".jpg")) | fingerprint }}
-                    {{ $sizes := slice "480" "768" "1024" "1280" "1440" }}
+                    {{ $sizes := slice "320" "480" "768" "1024" "1280" "1440" }}
                     <picture>
-{{/*                        {{ range $sizes }}*/}}
-{{/*                            <source media="(max-width: {{ . }}px)"*/}}
-{{/*                                    srcset='{{ ($jpg.Resize (print . "x q90")).Permalink }}'/>*/}}
-{{/*                        {{ end }}*/}}
+                        {{ range $sizes }}
+                            <source media="(max-width: {{ . }}px)"
+                                    srcset='{{ ($jpg.Resize (print . "x q75")).Permalink }}'/>
+                        {{ end }}
                         <img src="{{ $webp.Permalink }}"
                              class="project-link__image"
                              loading="lazy"
